Expose com.sun.media.sound
Fixes #229